Fixed clipping issues with Question Mark Block

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,6 +66,10 @@ code {
   animation: coinBlockHit 0.15s ease-in-out 1
 }
 
+.coin-clip-anim {
+  animation: coinClipHit 0.15s ease-in-out 1
+}
+
 @keyframes growShrink {
   0% {
     transform: scale(0);
@@ -101,10 +105,22 @@ code {
     translate: 0px 0%
   }
   50% {
-    translate: 0px -25%
+    translate: 0px -18.75px
   }
   100% {
     translate: 0px 0%
+  }
+}
+
+@keyframes coinClipHit {
+  0% {
+    clip-path: polygon(0 0, 100% 0%, 100% 75%, 0 75%)
+  }
+  50% {
+    clip-path: polygon(0 0, 100% 0%, 100% 68.75%, 0 68.75%)
+  }
+  100% {
+    clip-path: polygon(0 0, 100% 0%, 100% 75%, 0 75%)
   }
 }
 
